Correctly aligned content inside accordion, needs color

--- a/modules/projects/client/css/judge.css
+++ b/modules/projects/client/css/judge.css
@@ -21,3 +21,13 @@
     background-color: white;
     display: none;
 }*/
+
+textarea {
+    resize: vertical;
+}
+.criteria {
+    vertical-align: middle;
+    height: 50px;
+}
+
+
